--- a/config/database.yml
+++ b/config/database.yml
@@ -10,25 +10,25 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
   database: agenda_development
   pool: 5
-  username: root
-  password: Gchmon12
-  socket: /var/run/mysqld/mysqld.sock
+  username: 
+  password: root
+  socket: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgreesql
+  adapter: postgresql
   encoding: unicode
   database: agenda_test
   pool: 5
-  username: root
-  password:
+  username: 
+  password:root
   socket: 
 
 production:
@@ -36,5 +36,5 @@ production:
   encoding: unicode
   database: agenda_production
   pool: 5
-  username: root
-  password:
+  username: 
+  password:root
